added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
@@ -1,65 +1,65 @@
-THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=The metadata file could not be opened
-CMDI\ SCHEMA\ LOCATION=CMDI Schema Location
-COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Could not find the schema url, some nodes will not display correctly.
-LOAD\ IMDI\ FILES=Load IMDI Files
-A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=A dom id attribute has been found in one or more files, these files will need to be saved to correct this.
-INSERT\ FROM\ TEMPLATE=Insert from Template
-ERROR\ READING\ TEMPLATE=Error reading template
-ADD\ FROM\ TEMPLATE=Add from Template
-ERROR\ INSERTING\ CREATE\ DATE=Error inserting create date
-ADD\ RESOURCE=Add Resource
-#{0} is parent node for newly added node in table
+THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=Die Metadatendatei konnte nicht ge\u00f6ffnet werden
+CMDI\ SCHEMA\ LOCATION=CMDI Schema Speicherort
+COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Schema URL konnte nicht gefunden werden, einige Knoten werden nicht korrekt angezeigt.
+LOAD\ IMDI\ FILES= IMDI Dateien laden
+A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.= Dom id Attribut hwurde in einer oder mehreren Dateien gefunden, diese Dateien m\u00fcssen gespeichert werden, um dies zu korrigieren.
+INSERT\ FROM\ TEMPLATE=Aus der Vorlage einf\u00fcgen
+ERROR\ READING\ TEMPLATE=Fehler beim lesen der Vorlage
+ADD\ FROM\ TEMPLATE=Von der Vorlage hinzuf\u00fcgen
+ERROR\ INSERTING\ CREATE\ DATE=Fehler beim Einf\u00fcgen Datum erstellen
+ADD\ RESOURCE=Ressource hinzuf\u00fcgen
+#{0} ist ein Elternknoten f\u00fcr neu hinzugef\u00fcgte konten in der Tabelle
 \ IN\ {0}=\ in {0}
-#name of table of added node, {0} is node name
-NEW\ {0}=new {0}
-INSERT\ NODE\ ERROR=Insert node error
-ADD\ NODE=Add Node
-NEW\ RESOURCE\ IN\ %S=New resource in %s
-NEW\ RESOURCES\ IN\ %S=New resources in %s
-THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".=There is no controlled vocabulary for either Written Resource or Media File that match \"{0}\".
-THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=This probably means that the file is not archivable. However, you can proceed by manually selecting the resource type.
-DO\ YOU\ WANT\ TO\ PROCEED?=Do you want to proceed?
-WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=WARNING: Doing this will not guarantee that your data will be uploadable to the corpus server!
-ERROR\ READING\ VIA\ THE\ IMDI\ API=Error reading via the IMDI API
-MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Manually overridden (might not be compatible with the archive)
-CANCEL=Cancel
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=The type checker does not recognise the selected file(s), which means that they\nare not an archivable type. This action will override that decision and allow you\nto add the file(s) to a session, as either media or written resources,\nhowever it might not be possible to import the result to the corpus server.
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Override Type Checker Decision
-ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Error reading one of the links via the IMDI API
-GET\ LINKS=Get Links
-ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Error reading links via the IMDI API
-REMOVE\ IMDI\ LINKS=Remove IMDI Links
-COPY\ IMDI\ FILE=Copy IMDI File
-ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error reading via the IMDI API. See error log for details.
-ADD\ LINK=Add Link
-COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not open the required template file: %s. See error log for details 
-LOAD\ TEMPLATE=Load Template
-THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=The required template could not be read.
-DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Data category: <{0}>. No description available. See error log for details.
+#Name der Tabelle des hinzugef\u00fcgten Knoten, {0} ist Name des Knotens
+NEW\ {0}=neu {0}
+INSERT\ NODE\ ERROR=Fehler beim Einf\u00fcgen des Knotens
+ADD\ NODE=Knoten hinzuf\u00fcgen
+NEW\ RESOURCE\ IN\ %S=Neue Ressource in %s
+NEW\ RESOURCES\ IN\ %S=Neue Ressource in %s
+THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".= Es besteht kein W\u00f6rterbuch f\u00fcr Textressourcen oder Mediendatei, die \"{0}\" entsprechen.
+THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.= Dies bedeutet wahrscheinlich, dass die Datei nicht archivierbar ist. Sie k\u00f6nnen aber fortfahren, durch manuell Ressourcentypen auszuw\u00e4hlen.
+DO\ YOU\ WANT\ TO\ PROCEED?=M\u00f6chten Sie fortfahren?
+WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=WARNUNG: Dieser Vorgang garantiert nicht, dass Ihre Daten in den Korpus Server hochgeladen werden k\u00f6nnen!
+ERROR\ READING\ VIA\ THE\ IMDI\ API=Fehler beim Lesen mit dem IMDI API
+MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Manuell \u00fcberschrieben (m\u00f6glicherweise nicht kompatibel mit dem Archiv)
+CANCEL=Abbrechen
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Type Checker erkennt den (die) ausgew\u00e4hlte(n) Datei(en) nicht, was bedeutet \n, dass sie nicht archivierbare Typen sind. Durch diesen Vorgang wird diese Entscheidung \u00fcberschrieben und Sie \nk\u00f6nnen die Datei(en)zu einer Session hinzuf\u00fcgen, entweder als Medien- oder Textressource. \nDennoch kann das Resultat eventuell nicht in den Korpus Server importiert werden.
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Entscheidung des Type Checkers \u00fcberschreiben
+ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen von Link mit  IMDI API
+GET\ LINKS=Links erhalten
+ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen von Links mit IMDI API
+REMOVE\ IMDI\ LINKS=IMDI Links entfernen
+COPY\ IMDI\ FILE=IMDI Datei kopieren
+ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Fehler beim Lesen mit IMDI API. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+ADD\ LINK=Link hinzuf\u00fcgen
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Die gew\u00fcnschte Vorlagendatei kann nicht ge\u00f6ffnet werden:%s. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+LOAD\ TEMPLATE=Vorlage laden
+THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=Die gew\u00fcnschte Vorlage kann nicht gelesen werden.
+DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Datenkategorie: <{0}>. Keine Beschreibung verf\u00fcgbar. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen..
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
-COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: %s. See error log for details 
-LOAD\ CLARIN\ TEMPLATE=Load Clarin Template
-FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Failed to remove resource proxy with id {0}
-UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unexpected relation between source and target paths. See error log for details.
-INSERT\ NODE=Insert node
-COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Could not read the XML Schema
-ERROR\ INSERTING\ NODE=Error inserting node
-NO\ TEMPLATE\ FOUND\ FOR=No template found for: {0}
-CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Changing your current project from:\n{0}\nto:\n{1}
-ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil will need to close all tables once the files are moved.\nDo you wish to continue?
-ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your 'Local Corpus' will move\ninto your 'Working Directories' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
-ERROR\ SAVING\ CONFIGURATION=Error saving configuration
-COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
-COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Could not write to storage directory. Update check failed!
-THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=There was an error updating the application.\nPlease go to the website and update via the download link.
-THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=There is a new version available.\nPlease go to the website and update via the download link.
-THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=There was an error restarting the application.\nThe update will take effect next time the application is restarted.
-ERROR=Error
-There\ is\ a\ new\ version\ available=There is a new version available\nDo you want to update now?
+COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Gew\u00fcnschte Vorlagendatei konnte nicht gelesen werden: %s. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen. 
+LOAD\ CLARIN\ TEMPLATE=Clarin Vorlage laden
+FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Entfernen von Ressourcen proxy mit id {0}
+UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unerwartete Verbindung zwischen Quell- und Zielpfad. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
+INSERT\ NODE=Knoten einf\u00fcgen
+COULD\ NOT\ READ\ THE\ XML\ SCHEMA= XML Schema konnte nicht gelesen werden
+ERROR\ INSERTING\ NODE=Fehler beim Einf\u00fcgen des Knotens
+NO\ TEMPLATE\ FOUND\ FOR=Keine Vorlage f\u00fcr {0} gefunden
+CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Aktuelles Projekt von:\n{0}\nzu:\n{1} \u00e4ndern.
+ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil muss alle Tabellen schlie\u00dfen, nachdem die Dateien verschoben wurden.\nM\u00f6chten Sie fortfahren?
+ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Fehler bei Speicherung der Konfiguration zu {0}
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Die Dateien in Ihrem 'Lokalen Korpus' konnten nicht zum gew\u00fcnschten Speicherort verschoben werden.\nSie k\u00f6nnen jetzt abbrechen und keine \u00c4nderungen werden vorgenommen, oder Sie k\u00f6nnen das \nArbeitsverzeichnis \u00e4ndern.\nWenn Sie fortfahren werden alle Korpus- und Sessiondateien in Ihrem lokalen Korpus \nin Ihren 'Arbeitsverzeichnis'-Baum verschoben und Sie m\u00fcssen sie manuell importieren.\nM\u00f6chten Sie das Arbeitsverzeichnis dennoch \u00e4ndern?
+ERROR\ SAVING\ CONFIGURATION=Fehler bei Speicherung von Konfiguration
+COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Neue Konfiguration konnte nicht in {0} geschrieben werden
+COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Konnte nicht ins Speicherverzeichnis schreiben. Aktualisierungspr\u00fcfung fehlgeschlagen!
+THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Fehler ist bei Aktualisieren der Anwendung aufgetreten.\nBitte gehen Sie auf die Website und aktualisieren Sie mithilfe des Download-Links.
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Eine neue Version ist verf\u00fcgbar\nBitte gehen Sie auf die Website und aktualisieren Sie mithilfe des Download-Links.
+THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Fehler beim Neustart der Anwendung.\nDie Aktualisierung wird bei dem n\u00e4chsten Start der Anwendung durchgef\u00fchrt.
+ERROR=Fehler
+There\ is\ a\ new\ version\ available=Eine neue Version ist verf\u00fcgbar.\nM\u00f6chten Sie jetzt aktualisieren?
 FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=Failed to pass the journal to the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
-FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to activate the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
-FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Failed to show the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
-NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to activate this type of plugin yet.\n{0}\n{1}.{2}.{3}\n{4}
-FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to deactivate the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
-NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to deactivate this type of plugin yet.\n{0}\n{1}.{2}.{3}\n{4}
+FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Aktivieren des gew\u00fcnschten Plugins fehlgeschlagen.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
+FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Anzeigen des gew\u00fcnschten Plugins fehlgeschlagen.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
+NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Zum Aktivieren dieses Types Plugin ist noch keine Methode verf\u00fcgbar.\n{0}\n{1}.{2}.{3}\n{4}
+FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Deaktivieren des gew\u00fcnschten Plugins fehlgeschlagen.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
+NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Zum Deaktivieren dieses Types Plugin ist noch keine Methode verf\u00fcgbar.\n{0}\n{1}.{2}.{3}\n{4}
