added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
@@ -4,9 +4,9 @@ COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.
 LOAD\ IMDI\ FILES= IMDI Dateien laden
 A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.= Dom id Attribut hwurde in einer oder mehreren Dateien gefunden, diese Dateien m\u00fcssen gespeichert werden, um dies zu korrigieren.
 INSERT\ FROM\ TEMPLATE=Aus der Vorlage einf\u00fcgen
-ERROR\ READING\ TEMPLATE=Fehler beim lesen der Vorlage
-ADD\ FROM\ TEMPLATE=Von der Vorlage hinzuf\u00fcgen
-ERROR\ INSERTING\ CREATE\ DATE=Fehler beim Einf\u00fcgen Datum erstellen
+ERROR\ READING\ TEMPLATE=Fehler beim Lesen der Vorlage
+ADD\ FROM\ TEMPLATE=Aus der Vorlage hinzuf\u00fcgen
+ERROR\ INSERTING\ CREATE\ DATE=Fehler beim Einf\u00fcgen des Erstellungsdatums
 ADD\ RESOURCE=Ressource hinzuf\u00fcgen
 #{0} ist ein Elternknoten f\u00fcr neu hinzugef\u00fcgte konten in der Tabelle
 \ IN\ {0}=\ in {0}
@@ -20,26 +20,28 @@ THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.= Dies bedeutet wahrscheinlich, dass die Datei nicht archivierbar ist. Sie k\u00f6nnen aber fortfahren, durch manuell Ressourcentypen auszuw\u00e4hlen.
 DO\ YOU\ WANT\ TO\ PROCEED?=M\u00f6chten Sie fortfahren?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=WARNUNG: Dieser Vorgang garantiert nicht, dass Ihre Daten in den Korpus Server hochgeladen werden k\u00f6nnen!
-ERROR\ READING\ VIA\ THE\ IMDI\ API=Fehler beim Lesen mit dem IMDI API
+ERROR\ READING\ VIA\ THE\ IMDI\ API=Fehler beim Lesen mit der IMDI API
 MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Manuell \u00fcberschrieben (m\u00f6glicherweise nicht kompatibel mit dem Archiv)
 CANCEL=Abbrechen
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Type Checker erkennt den (die) ausgew\u00e4hlte(n) Datei(en) nicht, was bedeutet \n, dass sie nicht archivierbare Typen sind. Durch diesen Vorgang wird diese Entscheidung \u00fcberschrieben und Sie \nk\u00f6nnen die Datei(en)zu einer Session hinzuf\u00fcgen, entweder als Medien- oder Textressource. \nDennoch kann das Resultat eventuell nicht in den Korpus Server importiert werden.
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Entscheidung des Type Checkers \u00fcberschreiben
-ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen von Link mit  IMDI API
-GET\ LINKS=Links erhalten
-ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen von Links mit IMDI API
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Type Checker erkennt den (die) ausgew\u00e4hlte(n) Datei(en) nicht, was bedeutet \n, dass sie nicht archivierbare Typen sind. Durch diesen Vorgang wird diese Entscheidung \u00fcberschrieben \nund Sie k\u00f6nnen die Datei(en)zu einer Session hinzuf\u00fcgen, entweder als Medien- oder Textressource(n). \nDennoch kann das Resultat eventuell nicht ins Archiv importiert werden.
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Entscheidung des Type Checkers ignorieren
+ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen eines der Links mit der IMDI API
+GET\ LINKS=Links holen
+ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Fehler beim Lesen von Links mit der IMDI API
 REMOVE\ IMDI\ LINKS=IMDI Links entfernen
 COPY\ IMDI\ FILE=IMDI Datei kopieren
 ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Fehler beim Lesen mit IMDI API. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
 ADD\ LINK=Link hinzuf\u00fcgen
+#Janna heeft %s betrekking tot de naam van de template?
 COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Die gew\u00fcnschte Vorlagendatei kann nicht ge\u00f6ffnet werden:%s. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
 LOAD\ TEMPLATE=Vorlage laden
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=Die gew\u00fcnschte Vorlage kann nicht gelesen werden.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Datenkategorie: <{0}>. Keine Beschreibung verf\u00fcgbar. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen..
-NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
+#Janna What does  {0} stand for?
+NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Keine Gebrauchsbeschreibung f\u00fcr {0} gefunden in diesem Template 
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Gew\u00fcnschte Vorlagendatei konnte nicht gelesen werden: %s. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen. 
 LOAD\ CLARIN\ TEMPLATE=Clarin Vorlage laden
-FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Entfernen von Ressourcen proxy mit id {0}
+FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Entfernen von Ressourcen-Proxy mit ID {0} fehlgeschlagen
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unerwartete Verbindung zwischen Quell- und Zielpfad. F\u00fcr mehr Details bitte Fehlerprotokoll \u00fcberpr\u00fcfen.
 INSERT\ NODE=Knoten einf\u00fcgen
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA= XML Schema konnte nicht gelesen werden
@@ -53,7 +55,7 @@ ERROR\ SAVING\ CONFIGURATION=Fehler bei Speicherung von Konfiguration
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Neue Konfiguration konnte nicht in {0} geschrieben werden
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Konnte nicht ins Speicherverzeichnis schreiben. Aktualisierungspr\u00fcfung fehlgeschlagen!
 THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Fehler ist bei Aktualisieren der Anwendung aufgetreten.\nBitte gehen Sie auf die Website und aktualisieren Sie mithilfe des Download-Links.
-THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Eine neue Version ist verf\u00fcgbar\nBitte gehen Sie auf die Website und aktualisieren Sie mithilfe des Download-Links.
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Eine neue Version ist verf\u00fcgbar.\nBitte gehen Sie auf die Website und aktualisieren Sie mithilfe des Download-Links.
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Fehler beim Neustart der Anwendung.\nDie Aktualisierung wird bei dem n\u00e4chsten Start der Anwendung durchgef\u00fchrt.
 ERROR=Fehler
 There\ is\ a\ new\ version\ available=Eine neue Version ist verf\u00fcgbar.\nM\u00f6chten Sie jetzt aktualisieren?
