--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -10,7 +10,7 @@ ERROR\ INSERTING\ CREATE\ DATE=Error inserting create date
 ADD\ RESOURCE=Add Resource
 #{0} is parent node for newly added node in table
 \ IN\ {0}=\ in {0}
-#name of table of added node, {0} is node name
+#Janna: Problem about Neue, Neuer, Neues, Neue?? name of table of added node, {0} is node name
 NEW\ {0}=new {0}
 INSERT\ NODE\ ERROR=Insert node error
 ADD\ NODE=Add Node
@@ -37,6 +37,7 @@ LOAD\ TEMPLATE=Load Template
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=The required template could not be read.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Data category: <{0}>. No description available. See error log for details.
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
+#Janna heeft %s betrekking tot de naam van de template?
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: %s. See error log for details 
 LOAD\ CLARIN\ TEMPLATE=Load Clarin Template
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Failed to remove resource proxy with id {0}
@@ -45,11 +46,14 @@ INSERT\ NODE=Insert node
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Could not read the XML Schema
 ERROR\ INSERTING\ NODE=Error inserting node
 NO\ TEMPLATE\ FOUND\ FOR=No template found for: {0}
+#Janna What do {0} and {1} stand for?
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Changing your current project from:\n{0}\nto:\n{1}
 ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil will need to close all tables once the files are moved.\nDo you wish to continue?
+#Janna what does {0} stand for? what kind of thing?
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
 THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your 'Local Corpus' will move\ninto your 'Working Directories' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
 ERROR\ SAVING\ CONFIGURATION=Error saving configuration
+#Janna What does {0} stand for? what kind of thing?
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Could not write to storage directory. Update check failed!
 THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=There was an error updating the application.\nPlease go to the website and update via the download link.
@@ -57,6 +61,7 @@ THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=There was an error restarting the application.\nThe update will take effect next time the application is restarted.
 ERROR=Error
 There\ is\ a\ new\ version\ available=There is a new version available\nDo you want to update now?
+#Janna Wat betekent deze zin? is Journal een krant of an "diary" of wat is dat?
 FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=Failed to pass the journal to the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
 FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to activate the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
 FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Failed to show the requested plugin.\n{0}\n{1}\n{2}.{3}.{4}\n{5}
