--- a/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
@@ -50,6 +50,7 @@ NO\ TEMPLATE\ FOUND\ FOR=Keine Vorlage f\u00fcr {0} gefunden
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Aktuelles Projekt von:\n{0}\nzu:\n{1} \u00e4ndern.
 ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil muss alle Tabellen schlie\u00dfen, nachdem die Dateien verschoben wurden.\nM\u00f6chten Sie fortfahren?
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Fehler bei Speicherung der Konfiguration zu {0}
+#Janna Is 'Local Corpus' a changeable variable? in German it would be set into Akkusativ, so that it becomes 'Lokalen Korpus' which is not the same as 'Lokaler Korpus', so that there might be problems finding it back....
 THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Die Dateien in Ihrem 'Lokalen Korpus' konnten nicht zum gew\u00fcnschten Speicherort verschoben werden.\nSie k\u00f6nnen jetzt abbrechen und keine \u00c4nderungen werden vorgenommen, oder Sie k\u00f6nnen das \nArbeitsverzeichnis \u00e4ndern.\nWenn Sie fortfahren werden alle Korpus- und Sessiondateien in Ihrem lokalen Korpus \nin Ihren 'Arbeitsverzeichnis'-Baum verschoben und Sie m\u00fcssen sie manuell importieren.\nM\u00f6chten Sie das Arbeitsverzeichnis dennoch \u00e4ndern?
 ERROR\ SAVING\ CONFIGURATION=Fehler bei Speicherung von Konfiguration
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Neue Konfiguration konnte nicht in {0} geschrieben werden
