--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -122,6 +122,7 @@ TABLE_FIXED\ WIDTH=%s [fixed width]
 NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=No fields matched the data on the clipboard.
 NO\ DATA\ TO\ PASTE.=No data to paste.
 CONTINUE?=Continue?
+#Janna What does the {0} stand for- does it stand for a number or a word/ In case it stands for a word dativproblem...
 THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=There are {0} fields that will have their contents deleted by this paste action.\n\n
 TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Two fields of the same name are to be pasted into this table,\nthis will cause at least one field to be overwritten by another.\n\n
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Inconsistent number of columns in the data to paste.\nThe pasted data could be incorrect.
@@ -192,6 +193,7 @@ REPLACE\ SELECTED=Replace Selected
 FIND\ NEXT=Find Next
 REGULAR\ EXPRESSION=Regular Expression
 <ENTER\ REPLACEMENT\ TEXT>=<enter replacement text>
+#Janna difficult to understand? Had to ask Alex to understand what this could mean because two infinitives of verbs in a row result to be complicated sometimes "enter" "find"
 <ENTER\ FIND\ TEXT>=<enter find text>
 COPY\ DIRECTORY\ STRUCTURE=Copy directory structure
 METADATA\ FOR\ EACH\ RESOURCE=Metadata for each resource
@@ -306,6 +308,7 @@ THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=The template \"{0}\" could not be c
 #text shown for node until it is loaded
 LOADING\ NODE...=loading node...
 HISTORY_LAST\ SAVE=Last Save
+#Janna What does the {0} stand for?
 COPY\ OF\ {0}=copy of {0}
 FILE\ NOT\ FOUND=File not found
 COULD\ NOT\ LOAD\ DATA=Could not load data
@@ -322,6 +325,7 @@ COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\
 ERROR\ WHILE\ MOVING\ NODES=Error while moving nodes
 COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not move nodes because an error occurred while saving history for node. See error log for details.
 {0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} already exists in {1} and will not be added again
+#Janna shouldn't it say instead: 'Cannot link with or move a node into itself'? Or is it possible to say 'link sth. into'?
 CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Cannot link or move a node into itself
 LOADING\ ERROR=Loading Error
 ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Error adding node, could not wait for file to load
@@ -345,3 +349,5 @@ CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy '{0}' to '{1}'"
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Found more results than can be displayed, only showing the first {0} results
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search \"{0}\" because it does not have an archive handle
 DELETE\ FROM\ PARENT=Delete from parent
+#Janna What does the {0} stand for here?
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=
