added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -106,7 +106,7 @@ HIDE\ SELECTED\ COLUMNS=Hide Selected Columns
 OPEN\ IN\ LONG\ FIELD\ EDITOR=Open in Long Field Editor
 
 DELETE\ {0}\ X\ {1}=Delete {1} field "{0}"
-
+#Janna What do {1}  and "{0}" stand for, what kind of thing?
 DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Delete {1} attribute "{0}"
 
 ARBIL=Arbil
@@ -271,6 +271,7 @@ DELETE\ FIELD\ FROM\ ALL\ NODES=Delete field from all nodes
 FIXED\ COLUMN\ SIZE=Fixed column size
 MAKE\ COLUMN\ FIT\ CONTENTS=Make column fit contents
 MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Make all columns fit contents
+#Janna What does the  "{0}" stand for?
 MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Make all columns the size of "{0}"
 COPY\ TABLE\ FOR\ WEBSITE=Copy Table For Website
 COLUMN\ VIEW\ FOR\ THIS\ TABLE=Column View for this Table
