--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -16,6 +16,7 @@ INSERT\ NODE\ ERROR=Insert node error
 ADD\ NODE=Add Node
 NEW\ RESOURCE\ IN\ %S=New resource in %s
 NEW\ RESOURCES\ IN\ %S=New resources in %s
+#Janna What does controlled vocabulary in this context mean? What does the "{0}" stand for?
 THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".=There is no controlled vocabulary for either Written Resource or Media File that match \"{0}\".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=This probably means that the file is not archivable. However, you can proceed by manually selecting the resource type.
 DO\ YOU\ WANT\ TO\ PROCEED?=Do you want to proceed?
